fix overflow footer

--- a/gaya.css
+++ b/gaya.css
@@ -226,7 +226,6 @@ main {
 footer {
     background-color: #f8f9fa;
     text-align: center;
-    padding: 10px;
     position: relative;
     bottom: 0;
     width: 100%;
